@@ -1697,11 +1697,16 @@ static DP_CanvasState *apply_local_background_tile(DP_PaintEngine *pe,
     }
 }
 
-static int get_only_layer_id(DP_LocalState *ls)
+static int get_only_layer_id(DP_LocalState *ls, DP_CanvasState *cs)
 {
     switch (DP_local_state_view_mode(ls)) {
     case DP_VIEW_MODE_LAYER:
         return DP_local_state_active_layer_id(ls);
+    case DP_VIEW_MODE_GROUP: {
+        DP_LayerRoutes *lr = DP_canvas_state_layer_routes_noinc(cs);
+        return DP_layer_routes_search_parent_id(
+            lr, DP_local_state_active_layer_id(ls));
+    }
     default:
         return 0;
     }
@@ -1719,7 +1724,8 @@ emit_changes(DP_PaintEngine *pe, DP_CanvasState *prev, DP_CanvasState *cs,
              DP_PaintEngineCursorMovedFn cursor_moved, void *user)
 {
     DP_CanvasDiff *diff = pe->diff;
-    DP_canvas_state_diff(cs, prev, diff, get_only_layer_id(pe->local_state));
+    DP_canvas_state_diff(cs, prev, diff,
+                         get_only_layer_id(pe->local_state, cs));
     DP_renderer_apply(pe->renderer, cs, pe->local_state, diff,
                       pe->local_view.layers_can_decrease_opacity,
                       pe->local_view.checker_color1,
